fix/overflow

--- a/components/templates/single-module-song/styles.module.scss
+++ b/components/templates/single-module-song/styles.module.scss
@@ -56,5 +56,4 @@
 
 .player {
   width: 100%;
-  overflow: hidden;
 }
