--- a/components/templates/single-module/styles.module.scss
+++ b/components/templates/single-module/styles.module.scss
@@ -66,5 +66,4 @@
 
 .player {
   width: 100%;
-  overflow: hidden;
 }
